FIX: on button at a time for multi collapse

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -133,7 +133,10 @@ footer a {
     background-color: var(--buttons);
 }
 
-.btn-rooms:hover {
+.btn-rooms:hover,
+.btn-rooms:active,
+.btn-rooms:focus {
+    color: black;
     background-color: var(--bgcolor3);
 }
 
